@@ -18,7 +18,6 @@
  */
 package org.dependencytrack.integrations.defectdojo;
 
-import alpine.common.logging.Logger;
 import alpine.model.ConfigProperty;
 import org.apache.commons.lang3.StringUtils;
 import org.dependencytrack.integrations.AbstractIntegrationPoint;
@@ -29,10 +28,12 @@ import org.dependencytrack.model.Project;
 import org.dependencytrack.model.ProjectProperty;
 import org.dependencytrack.secret.management.SecretManager;
 import org.jspecify.annotations.Nullable;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 import java.net.http.HttpClient;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
@@ -46,7 +47,7 @@ import static org.dependencytrack.model.ConfigPropertyConstants.DEFECTDOJO_URL;
 
 public class DefectDojoUploader extends AbstractIntegrationPoint implements ProjectFindingUploader {
 
-    private static final Logger LOGGER = Logger.getLogger(DefectDojoUploader.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(DefectDojoUploader.class);
     private static final String ENGAGEMENTID_PROPERTY = "defectdojo.engagementId";
     private static final String REIMPORT_PROPERTY = "defectdojo.reimport";
     private static final String DO_NOT_REACTIVATE_PROPERTY = "defectdojo.doNotReactivate";
@@ -148,11 +149,11 @@ public class DefectDojoUploader extends AbstractIntegrationPoint implements Proj
                 return;
             }
             final String testTitle = getTestTitle(project);
-            final DefectDojoClient client = new DefectDojoClient(httpClient, this, new URL(defectDojoUrl.getPropertyValue()));
+            final DefectDojoClient client = new DefectDojoClient(httpClient, this, URI.create(defectDojoUrl.getPropertyValue()).toURL());
             if (isReimportConfigured(project) || globalReimportEnabled) {
                 final ArrayList<String> testsIds = client.getDojoTestIds(apiKeyValue, engagementId.getPropertyValue());
                 final String testId = client.getDojoTestId(engagementId.getPropertyValue(), testsIds, testTitle);
-                LOGGER.debug("Found existing test Id: " + testId);
+                LOGGER.debug("Found existing test Id: {}", testId);
                 if (testId.equals("")) {
                     client.uploadDependencyTrackFindings(
                             apiKeyValue,
